css/style.css
/* RESET */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* -----GENERAL----- */
html{
    scroll-behavior: smooth;
}

body{
    font-family: 'Open Sans', sans-serif;
    min-width: 1348px;
}

.flex-center{
    display: flex;
    justify-content: center;
    align-items: center;
}

.flex-around{
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.flex-between{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.big-container{
    width: 70%;
    height: 100%;
    margin: 0 auto;

    position: relative;
}

.default-container{
    width: 60%;
    height: 100%;
    margin: 0 auto;
}

.bg-blue{
    background-color: #b4d0e7 ;
}

div.separator-box-business-plane{
    width: 20%;
    height: 1px;
    background-color: grey;
    margin: 2rem 0;
}

h3{
    font-size: 1.5rem;
}

.link-blue{
    text-decoration: none;
    color: #0061ff;
    border-bottom: 1px solid #0061ff;
}

.link-blue:hover{
    color: #2a7cff;
}

/* Buttons */

.btn-default{
    border: none;
    padding: .6rem;
    cursor: pointer;
    background-color: rgba(255, 255, 255, 0);
}
.btn-default:hover{
    background-color: rgb(0, 0, 0);
    color: white;
}

.btn-blue{
    background-color: #0061ff;
    color: white;
}
.btn-blue:hover{
    background-color: #3c87ff;
}

.btn-white-border{
    background-color: white;
    border: 1px solid black;
}

.btn-white{
    background-color: white;
}



/* -------HEADER------- */
/* Nav */
header section.nav{
    width: 100%;
    min-width: 1348px;
    height: 70px;
    background-color: white;

    padding: 0 1rem;

    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;

    box-shadow: 0px 1.5px 11px -2px #000000;
}

div.left-nav-content>img{
    margin-right: 1.5rem;
    cursor: pointer;
}

nav.main-nav ul{
    list-style: none;
}

nav.main-nav ul li{
    margin: 0 .6rem;
    display: inline-block;
    cursor: pointer;
    font-size: .95rem;
}

nav.main-nav ul li a {
    text-decoration: none;
    color: black;
}

nav.main-nav ul li a:hover{
    border-bottom: 1px solid black;
    margin-top: .2rem;
}

div.btn{
    margin-left: .8rem;
}

/* Jumbo */
header section.jumbo{
    max-height: 490px;
    min-height: 490px;
    width: 100%;
    height: 85vh;
    background-color: #b4d0e7;

    padding: .5rem 1rem 0;
    margin-top: 70px;
}

section.jumbo h1{
    font-size: 3.6rem;
}

div.jumbo-txt-block{
    width: calc(100% - 620px);

    margin-top: 2rem;
}

div.jumbo-txt-block p{
    font-size: .8rem;
}

div.jumbo-btn{
    margin-top: 1.5rem;
    width: 65%;
    flex-direction: column;
}

div.jumbo-btn button{
    margin-bottom: .8rem;
    width: 100%;
}

div.jumbo-img{
    width: 620px;
    height: 300px;
   position: absolute;
   bottom: -10px;
   right: 0; 
}

div.jumbo-img>img{
    width: 100%;
}

div.bottom-arrow{
    position: absolute;
    bottom: 0;
    left: 0;

    font-size: 2.5rem;

    animation:shake-vertical .5s linear infinite
}


@keyframes shake-vertical {

    0%{
        transform: scale(1);
    }

    50%{
        transform: scale(1.2);

    }

    100%{
        transform: scale(1);
    }
    
}

div.bottom-arrow a{
    text-decoration: none;
    color: #000000;
}


/* -------MAIN------- */

/* Business Plane */
section.business-plane{
    margin-top: 2.5rem;

    width: 100%;
    height: auto;
    padding: 5rem 0 2rem 0 ;
}

section.business-plane h2{
    font-size: 2rem;
}

div.label{
    margin: 2rem 0;
    display: flex;
}

div.label div.annua{
    margin-left: 3rem;
}
/* Box */
div.box-plane-general-section{
    width: 100%;
    display: flex;
    
}

div.box-plane-business{
    width: calc((100% / 3) - .4rem);
    margin: 0 .4rem;
    border: 1px solid black;
}

div.box-plane-business span{
    display: block;
    margin-top: .5rem;
}

div.title-box-plane{
    height: 5%;
    width: 100%;
    border-bottom: 1px solid black;
}

div.inside-txt-box{
    padding: 1rem .8rem;
}


div.inside-txt-box span.price{
    margin: .8rem 0;
    font-size: .9rem;
    font-weight: bold;
}

div.inside-txt-box span.time{
    color: grey;
}

div.box-plane-business section.features{
    margin-top: 2.5rem;
}

div.box-plane-business section.features span{
    margin: .8rem 0;
    font-size: .9rem;
}

span.buy-now{
    font-size: .9rem;
}

div.free-trial-day{
    margin: 3rem 0 1.5rem;
}

section.highlights-plane h4{
    font-size: 1rem;
    margin-bottom: 1.8rem;
}

span.highlight{
    font-size: .9rem;
    margin: 1rem 0;
}

span.highlight i{
    color: #0061ff;
}



/* Team*/

section.team{
    width: 100%;
    height: auto;
    padding: 3rem 0;
}

div.box-team{
    width: 100%;
    height: 100%;
    border: 1px solid black;
}

div.title-team{
    height: 20%;
    width: 100%;
    border-bottom: 1px solid black;
}

div.team-section-info{
    display: flex;
    padding: 1.5rem 1rem;
}

section.left-team-info{
    width: 75%;
    height: 100%;
}

section.left-team-info span{
    display: block;
    font-weight: bold;
    margin: .5rem 0 3rem; 
    font-size: .9rem;
}

section.left-team-info p{
    font-size: .8rem;
}

div.right-bnt-team-section{
    width: 25%;
    height: 100%;
    display: flex;
    justify-content: center;
}
/* Find Partner*/

section.find-partner{
    min-height: 424px;
    max-height: 584px;
    height: 90vh;
    padding: 5rem 0;
}

div.left-findpartner-img{
    width: 55%;
    height: 100%;
    background-image: url(../img/partner.png);
    background-repeat: no-repeat;
    background-size: cover;
}

div.left-findpartner-img img{
    height: 100%;
}

div.right-findpartner-txt{
    width: 45%;
    height: 100%;
    padding: 1rem;
}

div.right-findpartner-txt p{
    margin: 1.5rem 0;
}

div.right-findpartner-txt button{
    margin-top: .8rem;
}

/* Business operations */
section.business-operations{
    width: 100%;
    height: auto;
    padding: 3rem 0 8rem;
}

section.business-operations h2{
    margin-bottom: 2rem;
}

div.business-operation-row{
    width: 100%;
    padding-top: 1rem;
}

article.business-operation-card{
    width: calc((100% / 3) - .4rem);
    height: 350px;

    margin: 0 .4rem;
}

div.business-operation-card-box-img{
    width: 100%;
    height: 55%;
}

div.business-operation-card-box-img img{
    height: 100%;
}

div.business-operation-card-box-txt{
    width: 100%;
    height: auto;
}

div.business-operation-card-box-txt h3{
    font-size: 1.2rem;
}

div.business-operation-card-box-txt p{
    margin-top: 1rem;
    font-size: .8rem;
}

.bottom-row{
    margin-top: 4rem;
}
/* Customer data*/
section.customer-data{
    width: 100%;
    /* height: 45vh; */
    padding: 3rem 0 4rem;
}

section.customer-data h2{
    font-size: 2.5rem;
    margin-bottom: 2rem;
}

/* Company Collaboration*/
section.company-collaboration{
    width: 100%;
}

div.company-collaboration-square{
    width: calc(100vw / 3 );
    height: calc(100vw / 3);
    min-width: 449px;
    background-color: #f5f5f5;

    display: flex;
    flex-wrap: wrap;
}

div.company-collaboration-square-box{
    width: calc(100% /2);
    height: calc(100% /2);
}

div.company-collaboration-square-box img{
    width: 65%;
    filter: invert();
}

/* Center Box */
div.company-collaboration-square-center-txt{
    padding: 2rem;
    flex-direction: column;
}

div.company-collaboration-square-center-txt img{
    width: 40%;
}

div.company-collaboration-square-center-txt p{
    margin: 1rem 0 3rem;
}

/* ID img */
#designit{
    background-color: #A2D39B;
    border: 10px solid #D1E9CD;
}

#asu{
    background-color: #61082B;
}

#uf-florida{
    background-color: #0093CE;
}

#topps{
    background-color: #FF1C1C;
}

#world-bicycle{
    background-color: #d5001f;
}

#hearst-corp{
    background-color: #b4d0e7;
}

#lonely-planet{
    background-color: #0d2481;
}

#clear-channel{
    background-color: #ffd830;
}

/* Try Dropbox */
section.try-dropbox{
    width: 100%;
    padding: 3.5rem;
}

section.try-dropbox h2{
    font-size: 2rem;
    color: #61082b;
}

div.try-dropbox-left{
    width: 60%;
    height: 100%;
    padding: 1rem;
}

div.try-dropbox-right-btn{
    width: 40%;
    height: 100%;
}

/* Faq*/

section.faq{
    width: 100%;
    padding: 7rem 0;
}

section.faq h2{
    font-size: 1.8rem;
    padding-bottom: 1.5rem;
}

div.faq-section{
    margin-top: 2rem;
    border-top: 1px solid grey;
}

div.faq-section-close{
    padding: 2rem 0;
    border-bottom: 1px solid grey;
    cursor: pointer;
    justify-content: space-between;
}


div.faq-section-close:hover span{
    transition: all .5s;
    color: #0093CE;
}

div.faq-section-close i{

    font-size: .8rem;
    padding-right: 2rem;
}

div.faq-section-close:hover i{
    padding-right: 1.3rem;
    transform: scale(2);
    color: #0093CE;
}

/* -------FOOTER------- */
.separator-line{
    width: 10%;
    height: 2px;
    background-color: grey;
    margin: 2rem 0;
}


footer{
    padding: 2rem;
    background-color: black;
    color: white;
}

/* Top Footer */
section.top-footer{
    width: 100%;
    height: 45%;
    margin-top: 3rem;
}

nav.footer-navs h5{
    font-size: 1.5rem;
    margin-bottom: 1.5rem;
}

nav.footer-navs ul li{
    list-style: none;
    margin-bottom: .8rem;
    font-size: .8rem;
}

nav.footer-navs ul li a{
    text-decoration: none;
    color: white;
}

nav.footer-navs ul li a:hover{
    color: grey;
}

/* Bottom Footer */

section.bottom-footer{
    padding: 1.5rem;
}

section.bottom-footer span.languages{
    color: grey;
    font-size: .9rem;
    cursor: pointer;
}

section.bottom-footer span.languages:hover{
    color: white;
}

section.bottom-footer span.languages i.fa-caret-up{
    vertical-align: middle;
    margin: .0rem .3rem;
}

